--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+  <title>Rooster Form</title>
 </head>
 <body>
   <img src="assets/samuel-ferrara.jpg">
@@ -50,6 +53,12 @@
       </div>
       <button type="submit">Create Account</button>
     </form>
+  </div>
+  <div class="logo-container">
+    Rooster
+  </div>
+  <div class="image-credit">
+    Photo by <a href="https://unsplash.com/@samferrara">Samuel Ferrara</a> on <a href="https://unsplash.com/">Unsplash</a>
   </div>
 </body>
 </html>
