--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Rooster Form</title>
 </head>
 <body>
-  <img src="assets/samuel-ferrara.jpg">
+  <div class="image-holder"><img src="assets/samuel-ferrara.jpg"></div>
   <div class="form-container">
     <div class="propaganda">
       This is not a real online service! You know you need something like this in your life
