Add javascript password match verification

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
   <div class="image-credit">
     Photo by <a href="https://unsplash.com/@samferrara">Samuel Ferrara</a> on <a href="https://unsplash.com/">Unsplash</a>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
